--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,8 +1,20 @@
+body{
+    background-image: url("https://www.todofondos.net/wp-content/uploads/black-texture-wallpaper-1.jpg");
+    background-size: 50%;
+    color:rgb(253, 253, 253);
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
 h1 { color: blueviolet }
 
 
 img { width: 400px} 
-
+.divClass{
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
 #thirdDiv {
     height: 600px;
     width: 500px;
@@ -11,6 +23,9 @@ img { width: 400px}
     border: 2px;
     border-color: blueviolet;
     border-style: dotted;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
     }
 #spanID {
     font-size: 18px;
